fix contrast

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -45,6 +45,21 @@ body {
   color: #136071 !important;
 }
 
+// .nav-tabs .nav-item .nav-link {
+//   color: #136071 !important;
+// }
+
+.nav-link {
+  color: #136071 !important;
+}
+.btn-outline-primary {
+  color: #136071 !important;
+}
+
+.btn-outline-primary:hover {
+  color: white !important;
+}
+
 // .bg-orange {
 //   background-color: #ffa500;
 // }
